<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:backgroundTint="@color/colorAccent"
    app:background="@color/bg_layout"
    tools:context=".ui.activity.AddDetailActivity">

    <include layout="@layout/view_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/detail_info"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_20"
        android:paddingRight="@dimen/dimen_20"
        android:paddingTop="@dimen/dimen_20"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInput">

            <EditText
                android:id="@+id/etFieldName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:hint="@string/name_field"
                android:autofillHints="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtOperator"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDisplayName"
                android:hint="@string/name_display"
                android:layout_alignParentStart="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_min"
            android:layout_below="@+id/txt_amount">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/etAddress"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_max"
            android:layout_below="@+id/txt_min">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passportId"
                android:id="@+id/etPassportId"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">
            <EditText
                android:id="@+id/etPassportIssue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/issue_passport"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/etPassportExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/expire_passport"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_12"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthDate"
                    android:textSize="@dimen/text_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="13/12/2019"
                    android:id="@+id/etBirthDate" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_grp"
                    android:textSize="@dimen/text_20"/>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/action_bar_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dimen_40"
            android:gravity="right"
            android:textColor="@color/edit_title"
            android:textSize="@dimen/text_10"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/dimen_20"
        android:backgroundTint="#4A84DF"
        android:elevation="@dimen/dimen_12"
        android:textColor="@android:color/white"
        android:text="@string/submit_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>